--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 button {
     width: 25vw;
     padding: 1vh 0 1vh 0;
-    border-radius: 20px;
+    border-radius: 50px;
     background-color: #BFCDCD;
     font-size: 2.2vh;
     color: #020505;
-    font-family: 'Prata', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     margin: 1vh 0 1vh 0;
 }
