--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,10 +21,10 @@ header {
 }
 
 .Header {
-    height: 15vh;
+    height: 22vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;;
+    justify-content: space-between;
     background-color: #FCF1ED;
     padding: 1vw 2vw 1vw 2vw;
     text-decoration: none;
@@ -35,11 +35,19 @@ header {
     text-decoration: none;
     color: #995533;
     font-weight: normal;
+    margin-bottom: 0;
+    margin-top: 0
 }
 
 .logo-icon {
     height: 5.5vh;
     margin: 0 2vw 0 2vw;
+}
+
+.logo-small {
+    font-size: 3vh;
+    margin-top: 0;
+    margin-bottom: 0
 }
 
 .navigation-icon {
