--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); */
 
 * {
     box-sizing: border-box;
@@ -8,7 +10,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Prata', sans-serif;
+    font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
