--- a/src/components/WordsDashboard/WordsDashboard.css
+++ b/src/components/WordsDashboard/WordsDashboard.css
@@ -11,3 +11,9 @@ ul {
 .words-dashboard {
     font-size: 2.2vh;   
 }
+
+.words-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
