--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -20,6 +20,12 @@
     animation: .75s ease-in 0s 1 slideInFromRight;
 }
 
+.error-message {
+    color: red;
+    font-size: 2.2vh;
+    width: 85vw;;
+}
+
 h3 {
     color:#84A9C0;
     font-size: 4vh;
@@ -52,5 +58,10 @@ h3 {
 @media only screen and (min-width: 800px) {
     .practice-button {
         width: 25vw;
+    }
+
+    .error-message {
+        width: 70vw;
+        text-align: center;
     }
 }
