--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,7 +1,16 @@
 .error-message {
-    color: red;
+    color: #BA3F1D;
     font-size: 2.2vh;
     width: 85vw;;
+}
+
+.submit-login {
+    display: flex;
+    flex-direction: column;
+    width: 85vw;
+    margin-top: 2vh;
+    font-size: 2.2vh;
+    align-items: center;  
 }
 
 @media only screen and (min-width: 800px) {
