--- a/src/components/LearnWord/LearnWord.css
+++ b/src/components/LearnWord/LearnWord.css
@@ -11,6 +11,15 @@
     margin: 3.5vh 0 3.5vh 0;
 }
 
+.submit-word-guess {
+    display: flex;
+    flex-direction: column;
+    width: 85vw;
+    margin-top: 2vh;
+    font-size: 2.2vh;
+    align-items: center;
+}
+
 .submit-your-answer {
     width: 50vw;
 }
