--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -6,12 +6,12 @@
 }
 
 .error-message {
-    color: red;
+    color: #BA3F1D;
     font-size: 2.2vh;
     width: 85vw;;
 }
 
-footer {
+.registration-input {
     display: flex;
     flex-direction: column;
     width: 85vw;
