--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -21,13 +21,13 @@
 }
 
 .error-message {
-    color: red;
+    color: #BA3F1D;
     font-size: 2.2vh;
     width: 85vw;;
 }
 
 h3 {
-    color:#84A9C0;
+    color: #4C7994;
     font-size: 4vh;
     animation: .75s ease-in 0s 1 slideInFromLeft;
     
@@ -52,7 +52,7 @@ h3 {
 }
 
 .welcome-blue {
-    color:#84A9C0
+    color: #4C7994;
 }
 
 @media only screen and (min-width: 800px) {
